cmake_minimum_required(VERSION 3.16)
project(untitled10)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled10 cmake-build-debug/Vehicle.cpp cmake-build-debug/Vehicle.h cmake-build-debug/main.cpp cmake-build-debug/Showroom.cpp cmake-build-debug/Showroom.h cmake-build-debug/Dealership.h cmake-build-debug/Dealership.cpp)